<resources>
    <string name="app_name">INNOWAVE</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_cart">Giỏ hàng</string>
    <string name="nav_profile">Hồ sơ</string>
    <string name="search_text">Bạn muốn mua gì hôm nay...</string>
    <string name="banner_name">INNOWAVE Store</string>
    <string name="flash_sale_remaining">Còn lại:</string>
    <string name="newest_product">Sản phẩm mới nhất</string>
    <string name="view_all">Xem tất cả</string>
    <string name="summer_hot_sale">Hot sale chào hè</string>
    <string name="end_time">Kết thúc sau:</string>
    <string name="weekend_hot_deal">Hot sale cuối tuần</string>
    <string name="hot_deal_party">Đại tiệc hot deal</string>
    <string name="filter">Bộ lọc</string>
    <string name="price_range">Khoảng giá (VNĐ)</string>
    <string name="product_sort">Phân loại tai nghe</string>
    <string name="wlhp">Chụp tai không dây</string>
    <string name="wlep">In-ear không dây</string>
    <string name="whp"> Chụp tai có dây</string>
    <string name="wep">In-ear có dây</string>
    <string name="apply">Áp dụng</string>
    <string name="reset">Thiết lập lại</string>
    <string name="sorting">Sắp xếp theo</string>
    <string name="sort">Sắp xếp</string>
    <string name="default_sort">Mặc định</string>
    <string name="price_low_high">Giá tăng dần</string>
    <string name="price_high_low">Giá giảm dần</string>
    <string name="most_popular">Phổ biến nhất</string>
    <string name="min_price_hint">Giá từ</string>
    <string name="max_price_hint">Giá đến</string>
    <string name="product_color">Màu sắc: </string>
    <string name="technical_specification">Thông số kỹ thuật</string>
    <string name="product_review">Đánh giá sản phẩm</string>
    <string name="product_relevant">Sản phẩm liên quan</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="buy_now">Mua ngay</string>
    <string name="login">Đăng Nhập</string>
    <string name="type_your_phone_number1">Nhập số điện thoại</string>
    <string name="type_your_password1">Nhập mật khẩu</string>
    <string name="cont">Tiếp tục</string>
    <string name="login_by_account">Đăng nhập bằng tài khoản</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="login_by_OTP">Đăng nhập bằng mã OTP</string>
    <string name="forgot_password1">Quên mật khẩu</string>
    <string name="or">HOẶC</string>
    <string name="dont_have_account">Bạn chưa có tài khoản?</string>
    <string name="sign_up1">Đăng ký</string>
    <string name="sign_up2">Đăng Ký</string>
    <string name="type_your_name">Nhập tên (*)</string>
    <string name="type_your_phone_number2">Nhập số điện thoại (*)</string>
    <string name="type_your_email">Nhập email</string>
    <string name="type_your_password2">Nhập mật khẩu (*)</string>
    <string name="type_your_password_again">Nhập lại mật khẩu (*)</string>
    <string name="password_hint">Mật khẩu phải có ít nhất 8 ký tự, bao gồm chữ hoa, chữ thường, số và ký tự đặc biệt</string>
    <string name="read_and_agree">Tôi đã đọc và đồng ý với</string>
    <string name="terms_and_conditions">các chính sách và điều khoản</string>
    <string name="have_account">Bạn đã có tài khoản?</string>
    <string name="login_now">Đăng nhập ngay</string>
    <string name="forgot_password2">Quên Mật Khẩu</string>
    <string name="type_your_registered_phone_number">Hãy nhập số điện thoại đã đăng ký vào bên dưới</string>
    <string name="create_new_password">Tạo Mới Mật Khẩu</string>
    <string name="type_your_new_password">Hãy nhập mật khẩu mới vào bên dưới</string>
    <string name="confirm">Xác nhận</string>
    <string name="type_OTP">Nhập mã xác nhận</string>
    <string name="type_OTP_send_to_your_phone_number">Vui lòng nhập mã OTP đã được gửi đến số điện thoại của bạn</string>
    <string name="OTP_will_expire_after">Mã OTP sẽ hết hạn sau</string>
    <string name="second">giây</string>
    <string name="resend_OTP">Gửi lại mã OTP</string>
    <string name="confirm_terms_and_conditions">Vui lòng xác nhận thông tin điều khoản sử dụng, chính sách bảo mật và chính sách thành viên</string>
    <string name="confirm_detail">Bằng việc đánh dấu vào ô này, Tôi xác nhận: \ni. Đã đọc và đồng ý với các Điều khoản giao dịch và Chính sách bảo mật của INNOWAVE, cho phép thu thập và xử lý dữ liệu cá nhân theo quy định pháp luật.\nii. Tôi cam kết rằng các thông tin cung cấp là hợp pháp, chính xác và đã được bên thứ ba đồng ý nếu có liên quan.</string>
    <string name="image_result">Kết quả tìm kiếm bằng hình ảnh</string>
    <string name="press_to_search">Nhấn vào nút chụp để tìm kiếm</string>
    <string name="soundcheck">Bộ chỉnh âm</string>
    <string name="antinoise_mode">Chế độ chống ồn</string>
    <string name="guarantee">Bảo hành đến:</string>
    <string name="activate_date">Ngày kích hoạt:</string>
    <string name="manu_year">Năm sản xuất:</string>
    <string name="seri_num">Số serial:</string>
    <string name="wireless_inear">Tai nghe in-ear không dây</string>
    <string name="kind">Loại tai nghe:</string>
    <string name="name">Tên thiết bị:</string>
    <string name="info">Thông tin thiết bị</string>
    <string name="ur_device">Thiết bị của bạn</string>
    <string name="setup">Cài đặt thiết bị</string>
    <string name="list">Danh sách thiết bị</string>
    <string name="choose_device">Chọn thiết bị mà bạn muốn kết nối:</string>
    <string name="next">Tiếp theo</string>
    <string name="finding">Đang tìm kiếm...</string>
    <string name="guide">Nhấn nút [+] để thêm thiết bị</string>
    <string name="press">Nhấn nút nguồn</string>
    <string name="sure">Bạn có chắc chắn muốn đọc hết thông báo?</string>
    <string name="cancel">Hủy</string>
    <string name="noti">Thông báo</string>
    <string name="noti_find">Tìm kiếm thông báo</string>
    <string name="add_manage">Quản lý địa chỉ</string>
    <string name="add_create">Tạo địa chỉ</string>
    <string name="add_address">Thêm địa chỉ</string>
    <string name="add_device">Thêm thiết bị</string>
    <string name="man_info">THÔNG TIN NGƯỜI NHẬN</string>
    <string name="full_name">Họ và tên</string>
    <string name="force">(Bắt buộc)</string>
    <string name="fill">Vui lòng nhập</string>
    <string name="phone_num">Số điện thoại</string>
    <string name="add_ship">ĐỊA CHỈ NHẬN HÀNG</string>
    <string name="province">Tỉnh/thành phố</string>
    <string name="District">Quận/huyện</string>
    <string name="Ward">Xã/phường</string>
    <string name="detail_add">Địa chỉ cụ thể</string>
    <string name="detail">Số nhà, tên đường...</string>
    <string name="all_read">Bạn đã xem hết thông báo!</string>
    <string name="noti_content">Nội dung thông báo</string>
    <string name="manufacture_year">Năm sản xuất: 2025</string>
    <string name="correct">Sửa</string>
    <string name="add_detail">Kim Châu, Phường Bình Định, Thị xã An Nhơn, Tỉnh Bình Định</string>
    <string name="defaultt">MẶC ĐỊNH</string>
    <string name="defaulttt">Đặt làm mặc định</string>
    <string name="home">Trang chủ</string>
    <string name="cart">Giỏ hàng</string>
    <string name="profile">Tài khoản</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="no_product_noti">Bạn chưa có sản phẩm nào trong giỏ!</string>
    <string name="select_or_enter_promotion">Chọn hoặc nhập khuyến mãi</string>
    <string name="delete">Xóa</string>
    <string name="product_name">INNOWAVE_WLHP-0103</string>
    <string name="color">Đen</string>
    <string name="only_one">Chỉ còn 1 sản phẩm</string>
    <string name="enter_voucher">Chọn khuyến mãi</string>
    <string name="promotion">Khuyến mãi</string>
    <string name="voucher">Mã giảm giá/phiếu mua hàng</string>
    <string name="detail_cost">Báo giá chi tiết</string>
    <string name="close">Đóng</string>
    <string name="sub_total">Tổng tạm tính</string>
    <string name="total">Thành tiền</string>
    <string name="invite_friends">Giới thiệu bạn bè</string>
    <string name="history_points">Lịch sử điểm thành viên</string>
    <string name="manage_order">Quản lý đơn hàng</string>
    <string name="manage_address">Quản lý địa chỉ</string>
    <string name="change_language">Thay đổi ngôn ngữ</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="english">Tiếng Anh</string>
    <string name="chat">Trò chuyện với INNOWAVE</string>
    <string name="policy">Chính sách và điều khoản</string>
    <string name="member">Thành viên</string>
    <string name="you_have">Bạn đang có</string>
    <string name="point">Điểm</string>
    <string name="total_point">Tổng tích lũy</string>
    <string name="silver">Bạc</string>
    <string name="accumulate_point_noti">Tích luỹ thêm 10.000 Điểm để nâng hạng Bạc</string>
    <string name="delete_account">Xóa tài khoản</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="my_device">Thiết bị của tôi</string>
    <string name="sign_up_sign_in">Đăng ký / Đăng nhập</string>
    <string name="chat_bot">INNOWAVE CHAT BOT</string>
    <string name="supporter">CHUYÊN VIÊN HỖ TRỢ INNOWAVE</string>
    <string name="invite_code">Mã giới thiệu</string>
    <string name="invite">Giới thiệu ngay</string>
    <string name="settings">Cài đặt</string>
    <string name="person_info">THÔNG TIN CÁ NHÂN</string>
    <string name="gender">Giới tính</string>
    <string name="dob">Ngày sinh</string>
    <string name="default_address">Địa chỉ mặc định</string>
    <string name="update_address">Cập nhật địa chỉ</string>
    <string name="order_list">Danh sách đơn hàng</string>
    <string name="choose_order_status">Chọn trạng thái đơn hàng</string>
    <string name="back">Back</string>
    <string name="policies_and_terms">Chính sách và điều khoản</string>
    <string name="about_innowave">Về INNOWAVE</string>
    <string name="introduce_innowave">Giới thiệu về INNOWAVE</string>
    <string name="store_locations">Hệ thống cửa hàng</string>
    <string name="warranty_center">Trung tâm bảo hành</string>
    <string name="buying_guide">Hướng dẫn mua hàng</string>
    <string name="privacy_policy">Chính sách bảo mật</string>
    <string name="installment_policy">Chính sách trả góp</string>
    <string name="repair_service">Dịch vụ sửa chữa</string>
    <string name="general_transaction_conditions">Điều kiện giao dịch chung</string>
    <string name="payment_policy">Chính sách thanh toán</string>
    <string name="shipping_policy">Chính sách giao hàng</string>
    <string name="warranty_policy">Chính sách bảo hành</string>
    <string name="return_policy">Chính sách đổi trả</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_group">Facebook Group</string>
    <string name="youtube">Youtube</string>
    <string name="tiktok">Tiktok</string>
    <string name="instagram">Instagram</string>
    <string name="support_email">Email: cskh@innowave.vn</string>
    <string name="free_order_hotline">Gọi mua hàng (miễn phí): 1800 6565</string>
    <string name="care_hotline">Gọi chăm sóc: 1800 6969</string>
    <string name="business_registration_certificate">Giấy chứng nhận đăng ký doanh nghiệp: 0345112687 do sở KH-ĐT TP.HCM cấp lần đầu ngày 30 tháng 05 năm 2004</string>
    <string name="head_office_label">ĐỊA CHỈ TRỤ SỞ</string>
    <string name="head_office_address">01 Võ Duy Ninh, Phường 22, Bình Thạnh, Thành phố Hồ Chí Minh</string>
    <string name="customer_support">Hỗ trợ khách hàng</string>
    <string name="purchase_policy">Chính sách mua hàng</string>
    <string name="innowave_community">Cộng đồng INNOWAVE</string>
    <string name="contact_us">Liên hệ</string>
    <string name="company_innowave_tech">Công ty Công nghệ INNOWAVE</string>
    <string name="login_required_message">Bạn cần đăng nhập để thực hiện chức năng này</string>
    <string name="login_required_title">Yêu cầu đăng nhập</string>
</resources>