<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="16dp">
    <!-- Tiêu đề và nút thoát -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btnCancel"
            android:src="@drawable/ic_cancel"
            android:contentDescription="Close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:padding="4dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            style="@style/Text_SubTitle"
            android:fontFamily="@font/nunito_extra_bold"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            style="@style/Text_Content"
            android:padding="8dp" />
    </LinearLayout>


    <View style="@style/Divider"/>

    <TextView
        android:id="@+id/tvDefault"
        style="@style/SortOption"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/default_sort" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp" />

    <TextView
        android:id="@+id/tvPopular"
        style="@style/SortOption"
        android:text="@string/most_popular"
        android:fontFamily="@font/nunito_medium"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/nunito_medium"/>

    <TextView
        android:id="@+id/tvNewest"
        style="@style/SortOption"
        android:text="@string/newest_product"
        android:fontFamily="@font/nunito_medium"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/nunito_medium"/>

    <TextView
        android:id="@+id/tvPriceAsc"
        style="@style/SortOption"
        android:text="@string/price_low_high"
        android:fontFamily="@font/nunito_medium"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/nunito_medium"/>

    <TextView
        android:id="@+id/tvPriceDesc"
        style="@style/SortOption"
        android:text="@string/price_high_low"
        android:fontFamily="@font/nunito_medium"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp" />
</LinearLayout>
