<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="331dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_rounded"
    android:padding="24dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:textColor="@color/black_color"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        style="@style/Text_Content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#043E5E"
            android:textSize="14sp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/tint_color5"
            style="@style/Text_Button_M"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            android:backgroundTint="#023D5D"
            android:textSize="14sp"
            style="@style/Text_Button_M"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>